# grpcCppPythonBoilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cppclient/: CMakeLists.txt
cppclient/src/: main.cpp
cppserver/: CMakeLists.txt
cppserver/src/: main.cpp
protobuf/: CMakeLists.txt
protobuf/proto/: status.proto  status_pb2.py  statusservice.proto  statusservice_pb2.py  statusservice_pb2_grpc.py
pythonclient/: main.py
pythonmonitor/: main.py
pythonserver/: main.py
